# investment-research-code

./: .gitignore  README.md  pyproject.toml
src/investment_research/: daily_report.py  monthly_portfolio.py
