[project]
name = "investment-research"
version = "0.1.0"
description = "Investment research platform - market data, charts, and reports"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "kaleido>=0.2.1",
    "requests>=2.32.0",
    "python-dateutil>=2.9.0",
    "jinja2>=3.1.0",
]

[project.scripts]
daily-report = "investment_research.daily_report:main"
monthly-portfolio = "investment_research.monthly_portfolio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/investment_research"]
